--- a/SPE-website/pages/templates/pages/gazette.html
+++ b/SPE-website/pages/templates/pages/gazette.html
@@ -8,19 +8,43 @@
 {% block content %}
 
        <br><br><br><br><br><br><br>
-
+<!-- Compress the gazette to less than 25MB for faster loading of website -->
 <!-- Store the compressed gazette pdf in the google drive -->
 <!-- if the drive link is https://drive.google.com/file/d/1dqplmQ661ODcjdlNYwOfUeLjpvkg53Wl/view?usp=sharing -->
 <!-- change it to this format https://drive.google.com/file/d/1dqplmQ661ODcjdlNYwOfUeLjpvkg53Wl/preview -->
+<!-- ie replace the view?usp=sharing to preview -->
+<!--the uncomment and copy the below snippet and paste the modified drive link in the src of iframe,
+change the year to the corresponding year, do not change any other parameter-->
+<!-- Past the snippet just above the previous year's gazette div-->
 
+<!--              <div class="grid-item">-->
+<!--                  <div class="container" >-->
+<!--                    <iframe frameborder="0" scrolling="no" width="320" height="240"-->
+<!--                                src=""></iframe>-->
+<!--                    <div>Gazette 2022 </div>-->
+<!--                </div>-->
+<!--              </div>  -->
+
+    <!-- CSS: gazettepage.css line 1-11 -->
     <div class="d-block mx-auto col-md-10  media">
         <h1 class="d-flex justify-content-center" id="PageTitle">Gazette</h1>
         <hr class="d-flex justify-content-center" id="UnderlineTitle">
 
+            <!-- CSS: gazettepage.css line 13-16 -->
             <h1 id="Heading">Download the latest version of the SPE IIT (ISM) Dhanbad Gazette: </h1>
 
+            <!-- CSS: gazettepage.css line 18-22 -->
             <div class="grid-container">
 
+<!--              <div class="grid-item">-->
+<!--                  <div class="container" >-->
+<!--                    <iframe frameborder="0" scrolling="no" width="320" height="240"-->
+<!--                                src=""></iframe>-->
+<!--                    <div>Gazette 2022 </div>-->
+<!--                </div>-->
+<!--              </div>  -->
+
+              <!-- CSS: gazettepage.css line 24-29 -->
               <div class="grid-item">
                   <div class="container" >
                     <iframe frameborder="0" scrolling="no" width="320" height="240"
