--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 {% load static %}
 
+<!-- base template for all other pages -->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,13 +37,14 @@
 
 
 <body>
-    <!-- Navbar -->
+    <!-- Navbar CSS: navbar.css line 14-28 -->
     <nav class="navbar navbar-expand-md navbar-dark" style="background-color:#26416c; box-shadow: none !important;">
         <div class="container-fluid">
             <a href="{% url 'home-page' %}" class="navbar-brand">
                 <img src="{% static 'pages/landingpage-bg/chapter-inv-logo.png' %}" style="height: 70px; margin: 10px">
             </a>
 
+            <!--CSS: navbar.css line 30-37, 52-57 -->
             <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="menu-icon-bar"></span>
                     <span class="menu-icon-bar"></span>
@@ -85,9 +87,10 @@
         </div>
     </nav>
 
-    <!--Navbar-->
+    <!--Lower Navbar CSS: down-navbar.css line 1-6 -->
     <nav class="navbar navbar-expand-md lower-navbar" style="position: absolute; z-index: 1;">
 
+        <!-- CSS: navbar.css line 30-37, 52-57 -->
         <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#basicExampleNav">
                     <span class="menu-icon-bar"></span>
                     <span class="menu-icon-bar"></span>
@@ -116,7 +119,7 @@
     </nav>
     <!--/.Navbar-->
 
-    <!-- Messages -->
+    <!-- Messages CSS: body.css line 6-13 -->
     {% if messages %} {% for message in messages %}
     <div class="alert alert-{{ message.tags }} message">
         {{ message }}
@@ -128,7 +131,7 @@
     {% block content %} {% endblock content %}
     <!-- Page Content -->
 
-    <!-- Scroll to top Button -->
+    <!-- Scroll to top Button CSS: scroll-to-top-button.css -->
     <button id="back-to-top-btn" style="z-index: 3;">
             <i class="material-icons">arrow_upward</i>
         </button>
