--- a/SPE-website/pages/templates/pages/landing-page.html
+++ b/SPE-website/pages/templates/pages/landing-page.html
@@ -12,8 +12,10 @@
     }
 </style>
 
+    <!-- CSS: landingpage.css line 10-33 -->
     <div class="banner">
 
+        <!-- CSS: landingpage.css line 35-42, 44-52, 81-84, 86-93 -->
         <div class="img-text">
             <h2>SPE IIT ISM STUDENT CHAPTER</h2>
             <img class="" src="https://i.imgur.com/Cs5qS5L.gif" style="height: 200px;">
@@ -22,6 +24,7 @@
                     the globe to gain an insight into the industry with a gulp of research essence.</p>
             </div>
 
+            <!-- CSS: landingpage.css line 95-118 -->
             <div class="center" style="float: left; margin-left: 180px;">
                 <div class="button"><a class="btn" href="{% url 'home-page' %}">HOME</a></div>
             </div>
@@ -32,6 +35,7 @@
 
         </div>
 
+        <!-- CSS: landingpage.css line 58-79 -->
         <div class="enclose"></div>
 
     </div>
