office bearers updated

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -111,13 +111,13 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="round-img" src="{% static 'pages/office-bearers/debosmit-sir.jpg' %}" alt="Avatar">
+                        <img class="round-img" src="{% static 'pages/office-bearers/anurag-sir.jpg' %}" alt="Avatar">
                     </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/debosmit-sir-blur.jpg);">
-                        <h1 class="card-title" style="color: white;">Debosmit Banerjee</h1>
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/anurag-sir-blur.jpg);">
+                        <h1 class="card-title" style="color: white;">Anurag Jain</h1>
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">President</p>
-                        <a href="https://www.linkedin.com/in/debosmit-banerjee/?originalSubdomain=in">
+                        <a href="https://www.linkedin.com/in/anuragskj">
                             <i class="fa fa-linkedin"></i></a>
                         <a href="#"><i class="fa fa-facebook"></i></a>
                     </div>
@@ -129,14 +129,14 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="round-img" src="https://i.imgur.com/rbRyfQ8.jpg" alt="Avatar">
+                        <img class="round-img" src="{% static 'pages/office-bearers/preet-sir.jpg' %}" alt="Avatar">
                     </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(https://i.imgur.com/raAvZsN.jpg);">
-                        <h1 class="card-title" style="color: white;">Sankhadip Biswas</h1>
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/preet-sir-blur.jpg);">
+                        <h1 class="card-title" style="color: white;">Preet Kothari</h1>
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">Vice President</p>
                         <a href="https://www.facebook.com/sankhadipbiswas03"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.linkedin.com/in/sankhadipbiswas/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/preet-kothari-a9884b172"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
