office bearers updated

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -149,13 +149,13 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="round-img" src="{% static 'pages/office-bearers/aritra-sir.jpg' %}" alt="Avatar">
+                        <img class="round-img" src="{% static 'pages/office-bearers/shamita-maam.jpg' %}" alt="Avatar">
                     </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/aritra-sir-blur.jpg);">
-                        <h1 class="card-title" style="color:white;">Aritra Roy</h1>
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/shamita-maam-blur.jpg);">
+                        <h1 class="card-title" style="color:white;">Shamita Jain</h1>
                         <hr class="underline" style="background-color: white;">
-                        <p class="card-content" style="color: white;">General Secretary</p>
-                        <a href=" https://www.linkedin.com/in/aritraroype/"><i class="fa fa-linkedin"></i></a>
+                        <p class="card-content" style="color: white;">Secretary</p>
+                        <a href="https://www.linkedin.com/in/shamita-jain-21171a175"><i class="fa fa-linkedin"></i></a>
                         <a href="https://www.facebook.com/aritra.roy.96592836"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
@@ -166,13 +166,13 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="round-img" src="{% static 'pages/office-bearers/shubham-sir.jpg' %}" alt="Avatar">
+                        <img class="round-img" src="{% static 'pages/office-bearers/soumya-maam.jpg' %}" alt="Avatar">
                     </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/shubham-sir-blur.jpg);">
-                        <h1 class="card-title" style="color: white;">Shubham Agarwal</h1>
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/soumya-maam-blur.jpg);">
+                        <h1 class="card-title" style="color: white;">Soumya Krishna</h1>
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">Communications Chairperson</p>
-                        <a href="https://www.linkedin.com/in/shubham-agarwal-552aa0173/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/somya-krishna-0bb721172"><i class="fa fa-linkedin"></i></a>
                         <a href="https://www.facebook.com/profile.php?id=100021658957419"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
@@ -183,13 +183,13 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="round-img" src="{% static 'pages/office-bearers/ashish-sir.jpg' %}" alt="Avatar">
+                        <img class="round-img" src="{% static 'pages/office-bearers/rajwardhan-sir.jpg' %}" alt="Avatar">
                     </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/ashish-sir-blur.jpg);">
-                        <h1 class="card-title" style="color: black;">Ashish Shukla</h1>
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/rajwardhan-sir-blur.jpg);">
+                        <h1 class="card-title" style="color: black;">Rajwardhan Rawat</h1>
                         <hr class="underline" style="background-color: black;">
-                        <p class="card-content" style="color: black;">Social Activities Chair</p>
-                        <a href="https://in.linkedin.com/in/ashish-shukla2021"><i class="fa fa-linkedin"></i></a>
+                        <p class="card-content" style="color: black;">Program Chairperson</p>
+                        <a href="https://www.linkedin.com/in/rajvardhanrawat"><i class="fa fa-linkedin"></i></a>
                         <a href="https://www.facebook.com/ashish.shukla.5836"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
@@ -197,41 +197,41 @@
             <!-- Card -->
         </div>
 
-        <div class="grid-container">
-            <!-- Card -->
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img class="round-img" src="{% static 'pages/office-bearers/harshit-sir.jpg' %}" alt="Avatar">
-                    </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/harshit-sir-blur.jpg);">
-                        <h1 class="card-title" style="color: white;">Harshit Pathak</h1>
-                        <hr class="underline" style="background-color: white;">
-                        <p class="card-content" style="color: white;">Technical Chair</p>
-                        <a href="https://www.linkedin.com/in/harshitpathak0311/"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/harshit.pathak.90663"><i class="fa fa-facebook"></i></a>
-                    </div>
-                </div>
-            </div>
-            <!-- Card -->
+<!--        <div class="grid-container">-->
+<!--            &lt;!&ndash; Card &ndash;&gt;-->
+<!--            <div class="flip-card">-->
+<!--                <div class="flip-card-inner">-->
+<!--                    <div class="flip-card-front">-->
+<!--                        <img class="round-img" src="{% static 'pages/office-bearers/harshit-sir.jpg' %}" alt="Avatar">-->
+<!--                    </div>-->
+<!--                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/harshit-sir-blur.jpg);">-->
+<!--                        <h1 class="card-title" style="color: white;">Harshit Pathak</h1>-->
+<!--                        <hr class="underline" style="background-color: white;">-->
+<!--                        <p class="card-content" style="color: white;">Technical Chair</p>-->
+<!--                        <a href="https://www.linkedin.com/in/harshitpathak0311/"><i class="fa fa-linkedin"></i></a>-->
+<!--                        <a href="https://www.facebook.com/harshit.pathak.90663"><i class="fa fa-facebook"></i></a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            &lt;!&ndash; Card &ndash;&gt;-->
 
-            <!-- Card -->
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img class="round-img" src="{% static 'pages/office-bearers/jalaj-sir.jpg' %}" alt="Avatar">
-                    </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/jalaj-sir-blur.jpg);">
-                        <h1 class="card-title" style="color: white;">Jalaj Tripathi</h1>
-                        <hr class="underline" style="background-color: white;">
-                        <p class="card-content" style="color: white;">Program Chairperson</p>
-                        <a href="https://www.linkedin.com/in/jalaj-tripathi-78768615a/"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/jalaj.tripathi.188"><i class="fa fa-facebook"></i></a>
-                    </div>
-                </div>
-            </div>
-            <!-- Card -->
-        </div>
+<!--            &lt;!&ndash; Card &ndash;&gt;-->
+<!--            <div class="flip-card">-->
+<!--                <div class="flip-card-inner">-->
+<!--                    <div class="flip-card-front">-->
+<!--                        <img class="round-img" src="{% static 'pages/office-bearers/jalaj-sir.jpg' %}" alt="Avatar">-->
+<!--                    </div>-->
+<!--                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/jalaj-sir-blur.jpg);">-->
+<!--                        <h1 class="card-title" style="color: white;">Jalaj Tripathi</h1>-->
+<!--                        <hr class="underline" style="background-color: white;">-->
+<!--                        <p class="card-content" style="color: white;">Program Chairperson</p>-->
+<!--                        <a href="https://www.linkedin.com/in/jalaj-tripathi-78768615a/"><i class="fa fa-linkedin"></i></a>-->
+<!--                        <a href="https://www.facebook.com/jalaj.tripathi.188"><i class="fa fa-facebook"></i></a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            &lt;!&ndash; Card &ndash;&gt;-->
+<!--        </div>-->
 
     </div>
 </div>
