office bearers updated

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -119,7 +119,7 @@
                         <p class="card-content" style="color: white;">President</p>
                         <a href="https://www.linkedin.com/in/anuragskj">
                             <i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/connectanurag.j"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                         <h1 class="card-title" style="color: white;">Preet Kothari</h1>
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">Vice President</p>
-                        <a href="https://www.facebook.com/sankhadipbiswas03"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100008168837557"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.linkedin.com/in/preet-kothari-a9884b172"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">Secretary</p>
                         <a href="https://www.linkedin.com/in/shamita-jain-21171a175"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/aritra.roy.96592836"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/shamita.jain.73"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">Communications Chairperson</p>
                         <a href="https://www.linkedin.com/in/somya-krishna-0bb721172"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/profile.php?id=100021658957419"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/somya.krishna.5"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
@@ -186,11 +186,11 @@
                         <img class="round-img" src="{% static 'pages/office-bearers/rajwardhan-sir.jpg' %}" alt="Avatar">
                     </div>
                     <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/rajwardhan-sir-blur.jpg);">
-                        <h1 class="card-title" style="color: black;">Rajwardhan Rawat</h1>
-                        <hr class="underline" style="background-color: black;">
-                        <p class="card-content" style="color: black;">Program Chairperson</p>
-                        <a href="https://www.linkedin.com/in/rajvardhanrawat"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/ashish.shukla.5836"><i class="fa fa-facebook"></i></a>
+                        <h1 class="card-title" style="color: white;">Rajwardhan Rawat</h1>
+                        <hr class="underline" style="background-color: white;">
+                        <p class="card-content" style="color: white;">Program Chairperson</p>
+                        <a href="https://www.linkedin.com/in/rajvardhanrawat/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/rajvardhan.rawat.9"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
@@ -269,7 +269,7 @@
                     <hr class="underline" style="background-color: white;">
                     <p class="card-content" style="color: white;">Team Leader</p>
                     <a href="https://www.linkedin.com/in/rajvardhanrawat/"><i class="fa fa-linkedin"></i></a>
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/rajvardhan.rawat.9"><i class="fa fa-facebook"></i></a>
                 </div>
             </div>
         </div>
