office bearers updated

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -80,7 +80,7 @@
                         <!-- Card CSS: core-team0.css line 104-109, 111-116, 118-122 -->
                         <h1 class="card-title" style="color: black;">Dr. Ajay Mandal</h1>
                         <hr class="underline" style="background-color: black;">
-                        <p class="card-content" style="color: black;">Head of the Department, Petroleum Engineering Department</p>
+                        <p class="card-content" style="color: black;">Head of the Department, Petroleum Engineering</p>
                         <!-- Card CSS: core-team0.css line 124-137 -->
                         <a href="https://www.linkedin.com/in/ajay-mandal-62762524/"><i class="fa fa-linkedin"></i></a>
                         <a href="https://www.facebook.com/mandal.ajay"><i class="fa fa-facebook"></i></a>
