--- a/SPE-website/events/templates/events/home.html
+++ b/SPE-website/events/templates/events/home.html
@@ -63,7 +63,7 @@
                     </a>
                 {% else %}
                     <a href="{% url 'signin-page' %}">
-                        <button type="button" class="btn btn-primary" style="float: left;">Sign In First</button>
+                        <button type="button" class="btn btn-primary" style="float: left;">Sign In to Register</button>
                     </a>
                 {% endif %}
 
