--- a/SPE-website/events/templates/events/events_detail.html
+++ b/SPE-website/events/templates/events/events_detail.html
@@ -48,7 +48,9 @@
                         </a>
                     {% else %}
                         <a href="{% url 'signin-page' %}">
-                            <button type="button" class="btn btn-primary" style="float: left;">Sign In to Register</button>
+                            <button type="button" class="btn btn-primary" style="width: 400px; height: 50px; font-size: 20px;">
+                                Sign In to Register
+                            </button>
                         </a>
                     {% endif %}
 
