--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -150,7 +150,7 @@
                         <h3>Contact</h3>
                         <p><i class="fas fa-map-marker-alt"></i> Department of Petroleum Engineering, IIT (ISM) Dhanbad, Hirapur, Sardar Patel Nagar, Dhanbad, Jharkhand 826004</p>
                         <p><i class="fas fa-phone"></i> Phone:+91 90246 40129</p>
-                        <p><i class="fas fa-envelope"></i> Email: <a href="#">speiitism@gmail.com</a></p>
+                        <p><i class="fas fa-envelope"></i> Email: <a href="#">Spe.ismsc@gmail.com</a></p>
                     </div>
                     <div class="col-md-3 offset-md-1 footer-links">
                         <div class="row">
