youtube video added

--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -692,6 +692,14 @@
             </div>
         </div>
     </div>
+
+    <div style="text-align: center;">
+            <iframe width="75%" height="538" src="https://www.youtube.com/embed/M8VSnadKqww" title="YouTube video player"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen ></iframe>
+    </div>
+    <br><br><br><br>
+
     <!-- Sponsors section -->
     <div class="container" style="overflow: hidden !important; padding: 0% 2%;" data-aos="fade-up" data-aos-duration="1500">
         <div style="font-family: 'Dosis', sans-serif; color:#323d47; text-align:center;overflow: hidden !important;">
