--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -448,10 +448,16 @@
                                 <p> <b>
                                  <br> <a href="#">1. WELCOME TO THE OFFICIAL WEBSITE OF SPE IIT ISM STUDENT CHAPTER!</a><br>
                                  <br> <a href="{% url 'gazette-page' %}">
-                                    2. Themed as "Unravelling a Metamorph: Energy in Transit", Gazette 10.0 is here to take you to an erudite virtual read-out ride!!</a><br>
-                                 <!-- <br> <a href="http://www.iitismspe.org/Events/Event/15/">3. SPE IIT (ISM) and SPE TAMU jointly presents INTER-CHAPTER RESEARCH EXCHANGE.
-                                    Participants need to submit Abstract by 05/02/2021 in the given link. Click for more information.</a><br> -->
-                                 <!-- <br> <a href="#">4. The deadline for INTER-CHAPTER RESEARCH EXCHANGE has been extended till 12th February, 2021.</a><br> -->
+                                    2. Themed as "Unravelling a Metamorph: Energy in Transit", Gazette 10.0 is here to take
+                                    you to an erudite virtual read-out ride!!</a><br>
+                                 <br> <a href="https://www.youtube.com/watch?v=M8VSnadKqww">
+                                    3. The first big juncture of SPE IIT (ISM) Dhanbad SC Essentials+ series - Machine
+                                    Learning Workshop by Mr. Prithvi Singh Chauhan. Catch us live for the beginning session
+                                    tonight at 9 PM!</a><br>
+                                 <br> <a href="http://www.iitismspe.org/Events/Event/23/">
+                                    4. Under the banner of the Diversity and Inclusion, the SPE IIT (ISM) Dhanbad SC is
+                                    glad to present an Essay Competition on the occasion of Pride Month'21! Express a
+                                    powerful message through your words this June 🏳️‍🌈.</a><br>
                                 </b></p>
                             </marquee>
                             <br>
