events page updated

--- a/SPE-website/events/templates/events/events_detail.html
+++ b/SPE-website/events/templates/events/events_detail.html
@@ -24,7 +24,7 @@
 
                     <!-- Event Poster -->
                     {% if object.img_url %}
-                        <img id="PostImage" src ="{{ object.img_url }}">
+                        <img id="PostImage" src ="{{ object.img_url }}" style="width: 500px; float: right;">
                     {% endif %}
                     <!-- Event Poster -->
 
