events, blogs page updated

--- a/SPE-website/blog/templates/blog/post_detail.html
+++ b/SPE-website/blog/templates/blog/post_detail.html
@@ -34,7 +34,7 @@
                     <!-- Post author and Date -->
 
                     <!-- Post Image CSS: post-styles.css line 30-33 -->
-                    <img id="PostImage" src ="{{ object.img_url }}">
+                    <img id="PostImage" src ="{{ object.img_url }}" style="width: 500px; float: right;">
                     <!-- Post Image -->
 
                     <!-- Post Content CSS: blog-body.css line 43-45 -->
